<resources>
    <string name="app_name">Go2Health</string>
    <string name="login">Login</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="password">Password</string>
    <string name="repassword">Conform Password</string>
    <string name="email">Email</string>
    <string name="SignOut">SignOut</string>
    <string name="title_activity_main">main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">user name place holder</string>
    <string name="nav_header_subtitle">Email placeholder</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_health">Health</string>
    <string name="menu_fitness">Fitness</string>
    <string name="menu_stats">Stats</string>
    <string name="menu_share">Share</string>
    <string name="menu_support">Support</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="notification">Notification</string>
    <string name="vibrate">Vibrate</string>
    <string name="ledLight">Led Light</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Settings fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="notification_off">You will NOT get Notifications</string>
    <string name="notification_on">You will get Notifications</string>
</resources>
