<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <SwitchPreferenceCompat
            android:id="@+id/notificationSwitch"
            app:key="notification"
            app:summaryOff="@string/notification_off"
            app:summaryOn="@string/notification_on"
            app:title="@string/notification" />

        <SwitchPreferenceCompat
            android:id="@+id/VibrateSwitch"
            app:key="vibrate"
            app:title="@string/vibrate" />

        <SwitchPreferenceCompat
            android:id="@+id/ledLightSwitch"
            app:key="ledLight"
            app:title="@string/ledLight" />


    </PreferenceCategory>


</PreferenceScreen>
