<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_health"
            android:title="@string/menu_health" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_fitness"
            android:title="@string/menu_fitness" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_stats"
            android:title="@string/menu_stats" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_support"
                android:title="@string/menu_support" />
        </menu>
    </item>

</menu>
