<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="98dp"
                android:layout_height="103dp"
                android:layout_marginStart="170dp"
                android:layout_marginTop="37dp"
                android:layout_marginEnd="170dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toTopOf="@+id/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/logo" />

            <EditText
                android:id="@+id/login"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="82dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/login"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/motPass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <EditText
                android:id="@+id/motPass"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="82dp"
                android:layout_marginBottom="32dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/buttonSignIn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login" />

            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="105dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="106dp"
                android:text="@string/signIn"
                app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/motPass" />

            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="105dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="106dp"
                android:text="@string/signUp"
                app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonSignIn" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="106dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="105dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonSignUp"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>